force-app/main/default/objects/CPRA_DoNotSell__mdt/CPRA_DoNotSell__mdt.object-meta.xml
<CustomObject>
    <label>CPRA_DoNotSell</label>
    <pluralLabel>CPRA_DoNotSells</pluralLabel>
</CustomObject>