force-app/main/default/objects/CPRA_DoNotSell__mdt/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <label>Community Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Janssen Community</fullName>
            </value>
            <value>
                <fullName>GSK Community</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>IQVIA Patient Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>