force-app/main/default/objects/CPRA_DoNotSell__mdt/fields/CPRA_Label__c.field-meta.xml
<CustomField>
    <fullName>CPRA_Label__c</fullName>
    <description>This is the label which will be displayed in UI</description>
    <inlineHelpText>This is the label which will be displayed in UI</inlineHelpText>
    <label>CPRA Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>