force-app/main/default/objects/CPRA_DoNotSell__mdt/fields/Link_to_redirect__c.field-meta.xml
<CustomField>
    <fullName>Link_to_redirect__c</fullName>
    <label>Link to redirect</label>
    <type>Url</type>
</CustomField>